# dots

./: .csharpierrc.yaml  .djshrc  .gitconfig  .gitignore  .gitignore_global  .gitmux.conf  .ideavimrc  .luarc.json  .p10k.zsh  .tmux.conf  .wezterm.lua  .zshrc  .zshrc.local.template  AGENTS.md  FORCLAUDE.md  aerospace.toml  alacritty.toml  alacritty.yml  devbox.yaml  i3config  init.lua  killsesh.sh  logs.db  readme.md  reptosesh.sh  sketchybarrc  vscode.json  workflow.md  zshenv
.claude/: settings.local.json
alacritty/: alacritty.toml
applications/: ghostty-ssh.desktop
arch/: .p10k.zsh  .zshrc  hyprland.conf
borders/: bordersrc
fcitx5/: config
fed/: setup.sh  sway-config
fedasahi/: INSTALL.md  setup.sh  sway-config
feddesk/: setup.sh  sway-config
fedora/: setup.sh
gh-dash/: config.yml
ghostty/: config
installation/: brew.sh  install.sh
logtui/: Cargo.toml  README.md
logtui/src/: calendar.rs  db.rs  editor.rs  lib.rs  main.rs  models.rs  parser.rs  search.rs  storage.rs  summary.rs  ui.rs
mcp/: config.json
nvim/: .gitignore  init.lua  init.lua.new  init.lua.old  lazy-lock.json  mini-deps-snap  nvim-pack-lock.json
roslyn/: Microsoft.CodeAnalysis.AnalyzerUtilities.xml  Microsoft.CodeAnalysis.CSharp.Features.xml  Microsoft.CodeAnalysis.CSharp.Workspaces.xml  Microsoft.CodeAnalysis.CSharp.xml  Microsoft.CodeAnalysis.ExternalAccess.Copilot.xml  Microsoft.CodeAnalysis.ExternalAccess.Razor.Features.xml  Microsoft.CodeAnalysis.Features.xml  Microsoft.CodeAnalysis.LanguageServer  Microsoft.CodeAnalysis.LanguageServer.Protocol.xml  (+6 more)
sway/: config
(+119 files in other folders)
