[package]
name = "logtui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lt"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
anyhow = "1.0"
regex = "1.10"
tempfile = "3.8"
rusqlite = { version = "0.31.0", features = ["bundled"] }
ulid = "1.1"
unicode-width = "0.1"
